--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="yandex-verification" content="92b97f92acd06397" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VetClinic</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"/>
@@ -342,3 +343,4 @@
   </script>
 </body>
 </html>
+
